Cohort_29 Marina task-fe-dom-magic-buttons

--- a/index.css
+++ b/index.css
@@ -16,6 +16,22 @@
   padding: 15px;
 }
 
+.new-styles-for-btn {
+  flex: 1 1 auto;
+  width: 175px;
+  text-align: center;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+
+  &:hover {
+    background-position: right center;
+  }
+}
 
 #text {
   font-size: 30px;
